cover.css
/*
 * Globals
 */


/* Custom default button */
.btn-light,
.btn-light:hover,
.btn-light:focus {
  color: #d03f96;
  background-color: rgb(250, 197, 206);
  text-shadow: none; /* Prevent inheritance from `body` */
}
.btn {
  color: #e371b6;
  background-color: rgb(251, 221, 226);
}


/*
 * Base structure
 */

body {
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
  background-color: rgb(22, 18, 50);
  background-image: url("images/ram.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  filter: brightness(110%) grayscale(10%) saturate(0.9);
}
#overlay {
  background-color: rgb(215, 85, 124);
  opacity: 0.1;
  z-index: -1;
  height: 100vh;
  width: 100vw;
  position: absolute;
}

.fadein { animation: fadein 1s; }
@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

.cover-container {
  max-width: 42em;
}


/*
 * Header
 */


.nav-masthead .nav-link {
  color: rgba(255, 255, 255, 0.868);
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  color: #ea55a2;
  border-bottom-color: #7e3551;
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: rgb(254, 146, 221);
  border-bottom-color: #971c4b;
}


/* ----------------------------------------------- */

#oldDiv {
  background-color: rgba(8, 5, 35, 0.5);
  border-radius: 20px;
  padding: 2em
  /* transition: width 0.5s ease-in; */
}

#desc {
  font-size: 15px;
}


@media only screen and (max-width: 800px) {
  #honey, #honey2 {
    display: none;
  }
  
}

#honey {
  filter: brightness(120%) contrast(80%) saturate(80%) hue-rotate(-10deg);
  z-index: -1;
  position: absolute;
  right: -10px;
  bottom: 0%;
  height: 700px;
  opacity: 0;
  transition: opacity 1s ease-out;
  
}
#honey2 {
  filter: brightness(120%) contrast(80%) saturate(90%);
  z-index: -1;
  position: absolute;
  left: 0;
  bottom: 0%;
  height: 730px;
  opacity: 0;
  transition: opacity 1s ease-out;
}

.grow-on-hover {
  transition: transform 1.25s ease; /* Add a smooth transition effect */
}

.grow-on-hover:hover {
  transform: scale(1.02); /* Scale the element on hover */
}

@keyframes rainbowAnimation {
      0%   { color: #FFA7D1; }      
      28%  { color: #FFDCCF; }
      42%  { color: #FFFACD; }
      57%  { color: #D3FFB3; }
      71%  { color: #B2FFFF; }
      85%  { color: #CDCCFF; }
      100% { color: #FFA7D1; }                
}

.rainbow-text {
  animation: rainbowAnimation 10s infinite linear; 
}

